add 5.7 check to path and correct some md

--- a/2021.4.9验收/week3_cspt1t2t4模测/t1.md
+++ b/2021.4.9验收/week3_cspt1t2t4模测/t1.md
@@ -10,8 +10,8 @@ msy 的显示器被 yhf 借走了，于是 msy 需要一个新的显示器。他
 
 ### 输入格式
 
-第一行输入一个数 n*n*，表示所有小灯的数量。
-第二行输入一个长度为 n*n* 的字符串，表示每个小灯的颜色。颜色使用`R`、`G`、`B`三种字母表示。
+第一行输入一个数 n，表示所有小灯的数量。
+第二行输入一个长度为 n的字符串，表示每个小灯的颜色。颜色使用`R`、`G`、`B`三种字母表示。
 
 
 
@@ -42,4 +42,4 @@ RGBRGBRG
 
 ### 评测用例规模与约定
 
-1≤*n*≤105
+1≤*n*≤10^5
