--- a/2021.4.9验收/week3_cspt1t2t4模测/t2.md
+++ b/2021.4.9验收/week3_cspt1t2t4模测/t2.md
@@ -7,14 +7,14 @@
 在很多的交互式网站中，都需要通过使用用户名与密码进行登录，为了正确的评估一个密码的强弱，机智的 lzh 想出了一个评价方案。
 这里研究的密码只有数字与大小写字母组成。具体的评价方案如下：
 
-- 如果一个密码的长度小于 66，则这个密码的强度为 00。
-- 对于长度大于等于 66 的密码，根据字符的种类（字符分为三类：数字，小写字母，大写字母），将连续的同种类的密码划分为一段，其段数即为密码的强弱程度。例如，密码 `asd123As2d` 可以分为 `asd`、`123`、`A`、`s`、`2`、`d` 6段，所以这个密码的强度为6。
+- 如果一个密码的长度小于 6，则这个密码的强度为 0。
+- 对于长度大于等于 6的密码，根据字符的种类（字符分为三类：数字，小写字母，大写字母），将连续的同种类的密码划分为一段，其段数即为密码的强弱程度。例如，密码 `asd123As2d` 可以分为 `asd`、`123`、`A`、`s`、`2`、`d` 6段，所以这个密码的强度为6。
 
 
 
 ### 输入格式
 
-输入一行一个字符串 s*s*，1 \leq |s| \leq 10^61≤∣*s*∣≤106，表示密码。
+输入一行一个字符串 s，1 <=|s| <=10^6，表示密码。
 
 
 
@@ -37,5 +37,4 @@
 ```
 6
 ```
-
 
