--- a/2021.4.9验收/week3_cspt1t2t4模测/t4.md
+++ b/2021.4.9验收/week3_cspt1t2t4模测/t4.md
@@ -4,9 +4,9 @@
 
 ### 问题描述
 
-- TT 的家门外有一家味道很好的拉面馆，每天都有很多人在拉面馆内喝拉面。拉面有 k*k* 种配料，分别记为 1,2,..., k1,2,...,*k*，每种配料都有着独特的风味。为了应对短时间内大量人群用餐需求，面馆的老板会在有客人到来之前，提前做好配有各种配料的拉面 n*n* 碗（之后不再制作新的拉面），每碗面都会有 k*k* 种配料中的一种或多种。每一碗面都有一个制作完成的时间点 t_i*t**i*，每碗面的制作完成的时间点都是唯一的。
+- TT 的家门外有一家味道很好的拉面馆，每天都有很多人在拉面馆内喝拉面。拉面有 k种配料，分别记为 1,2,..., k，每种配料都有着独特的风味。为了应对短时间内大量人群用餐需求，面馆的老板会在有客人到来之前，提前做好配有各种配料的拉面 n碗（之后不再制作新的拉面），每碗面都会有 k种配料中的一种或多种。每一碗面都有一个制作完成的时间点 ti，每碗面的制作完成的时间点都是唯一的。
 
-  有 m*m* 位客人陆续到店吃面，第 i*i* 位客人在 s_i*s**i* 时间到店，且有自己喜爱的一些配料 c_1,...,c_{C_i}*c*1,...,*c**C**i*，也就是说，这位客人会买一份**至少含有**配料 c_1,...,c_{C_i}*c*1,...,*c**C**i* 的面（可以含有其他种类的配料，但不能缺少喜爱的配料）。当满足条件的面有很多碗时，这位客人会挑选完成时间距离自己的到店时间最近的面，若这碗面是第 j*j* 碗，则顾客会产生 s_i - t_j*s**i*−*t**j* 的不满意度；当含有 c_i*c**i* 的面不存在时，顾客会直接愤怒离开。
+  有 m位客人陆续到店吃面，第 i位客人在 si 时间到店，且有自己喜爱的一些配料c1,...c(ci)，也就是说，这位客人会买一份**至少含有**配料 c1,...c(ci) 的面（可以含有其他种类的配料，但不能缺少喜爱的配料）。当满足条件的面有很多碗时，这位客人会挑选完成时间距离自己的到店时间最近的面，若这碗面是第 j碗，则顾客会产生 si-tj 的不满意度；当含有 ci 的面不存在时，顾客会直接愤怒离开。
 
   今天热心的 TT 要帮老板记录客人的情况，请你帮他写一个程序完成上述要求。
 
@@ -14,17 +14,17 @@
 
 ### 输入格式
 
-输入的第一行三个数 n, m, k*n*,*m*,*k*，(1 \leq n, m \leq 2\times 10^5, 1 \leq k \leq 3)(1≤*n*,*m*≤2×105,1≤*k*≤3)，分别表示制作的面的数量，顾客的数量与配料的种类数。
+输入的第一行三个数 n, m, k，(1<=n, m<= 2x10^5, 1 <=k <=3)，分别表示制作的面的数量，顾客的数量与配料的种类数。
 
-接下来一行 n*n* 个数，表示 t_i*t**i*，保证输入的 t_i*t**i* 是递增的。
-接下来 n*n* 行，表示每碗面含有的材料。第一个数字为 K_i(K_i\geq 1)*K**i*​(*K**i*​≥1) 表示第 i*i* 碗面中含有的配料的种类数，接下来 K_i*K**i*​ 个数，表示这碗面含有的配料编号，保证编号不会重复。
+接下来一行 n个数，表示ti，保证输入的 ti是递增的。
+接下来 n行，表示每碗面含有的材料。第一个数字为Ki(Ki>=1) 表示第 i 碗面中含有的配料的种类数，接下来 Ki 个数，表示这碗面含有的配料编号，保证编号不会重复。
 
-接下来一行 m*m* 个数，表示 s_i*s**i*，保证 s_i*s**i* 是递增的，且 \forall i,j∀*i*,*j*，1 \leq t_i < s_j \leq 10^91≤*t**i*<*s**j*≤109。
-接下来 m*m* 行，表示每位顾客的喜好。第一个数字为 C_i(C_i\geq 1)*C**i*​(*C**i*​≥1) 表示第 i*i* 个顾客喜爱配料的种类数，接下来 C_i*C**i*​ 个数，表示顾客喜爱的配料编号，保证编号不会重复。
+接下来一行 m个数，表示 si，保证 si 是递增的，且 ∀*i*,*j*，1<=ti< sj <=10^9。
+接下来 m行，表示每位顾客的喜好。第一个数字为Ci(Ci>=1) 表示第 i个顾客喜爱配料的种类数，接下来Ci 个数，表示顾客喜爱的配料编号，保证编号不会重复。
 
 ### 输出格式
 
-输出包含 m*m* 行，每行表示一个顾客的状态，若顾客吃到了面，则输出顾客的不满意度；若顾客愤怒离开，则输出`Angry`。
+输出包含 m 行，每行表示一个顾客的状态，若顾客吃到了面，则输出顾客的不满意度；若顾客愤怒离开，则输出`Angry`。
 
 
 
@@ -138,9 +138,9 @@ Angry
 
 ### 数据说明
 
-存在 20\%20% 的数据，满足 k=1*k*=1；
-存在 30\%30% 的数据，满足 n,m \leq 5000*n*,*m*≤5000；
-存在 30\%30% 的数据，满足 k=2*k*=2；
+存在 20% 的数据，满足 k=1；
+存在 30% 的数据，满足 n*,*m≤5000；
+存在 30% 的数据，满足 k=2；
 
 
 
